# PerplexityApi

./: .dockerignore  .gitignore  Dockerfile  INSTALL.md  README.md  askplexi  config.json  docker-compose.x11.yml  docker-compose.yml  install-service.sh  install-wrapper.sh  last_atempts_nodriver.md  main.py  manual_login.py  pyproject.toml  requirements.txt  server.py  test_nodriver_simple.py
src/: __init__.py  browser.py  cli.py  config.py  manual_login.py  nodriver_wrapper.py  perplexity.py  server.py  session_manager.py  systemd_notify.py  timebutler_auto.py
